--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:required="true" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <meta-data
         android:name="com.google.android.gms.vision.DEPENDENCIES"
         android:value="barcode" />
@@ -17,6 +18,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".framework.ExpiryDateTrackerApplication"
         android:theme="@style/Theme.ThirdWayV_ExpiryDataTracker">
         <activity
             android:name=".presentation.MainActivity"
@@ -27,6 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".framework.NotificationReceiver" />
     </application>
 
 </manifest>
